--- a/my-nextjs-app/package.json
+++ b/my-nextjs-app/package.json
@@ -9,15 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@nivo/line": "^0.99.0",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@types/plotly.js": "^3.0.6",
     "framer-motion": "^12.23.22",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "papaparse": "^5.5.3",
+    "plotly.js-dist-min": "^3.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
+    "react-plotly.js": "^2.6.0",
+    "recharts": "^3.2.1",
     "three": "^0.180.0"
   },
   "devDependencies": {
@@ -26,8 +32,11 @@
     "@types/geojson": "^7946.0.16",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
+    "@types/offscreencanvas": "^2019.7.3",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-plotly.js": "^2.6.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
